set up database and hash password.

--- a/src/views/contacts/sign-up.ejs
+++ b/src/views/contacts/sign-up.ejs
@@ -2,11 +2,11 @@
 
   <div class="sign-up-form">
     <h3>Sign Up</h3>
-    <form action="" method="POST">
+    <form action="/users/sign-up" method="POST">
       <input type="text" name="name" placeholder="name" required>
       <input type="email" name="email" placeholder="email" required>
       <input type="password" name="password" placeholder="password" required>
-      <button style="margin-top:5px">Sign Up!</button>
+      <input style="margin-top:5px" type="submit" value="sign up">
     </form>
     <p>Existing user? <a href='./login'>Login</a></p>
   </div>
