--- a/src/views/contacts/login.ejs
+++ b/src/views/contacts/login.ejs
@@ -6,7 +6,7 @@
       <input type="email" name="email" placeholder="email" required>
       <input type="password" name="password" placeholder="password" required>
       <br/>
-      <button style="margin-top:5px">Login!</button>
+      <input style="margin-top:5px" type="submit" value="Log In">
     </form>
     <p>New user? <a href='./sign-up'>Sign Up</a></p>
   </div>
