--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -1,8 +1,11 @@
 <nav>
-  <a href="/">Home</a>
+  <a href="/home">Home</a>
   <form method="get" action="/contacts/search" class="search-form">
     <input name="q" type="search" placeholder="search" value="<%= query %>" autofocus/>
     <input type="submit" style="display: none" />
   </form>
-  <a href="/contacts/new">New Contact</a>
+  <a href="/users/new">New Contact</a>
+  <a href="/users/sign-up">Sign-up</a>
+  <a href="/users/login">Login</a>
+  <a href="/users/logout">Logout</a>
 </nav>
