--- a/src/views/contacts/login.ejs
+++ b/src/views/contacts/login.ejs
@@ -8,6 +8,11 @@
       <br/>
       <input style="margin-top:5px" type="submit" value="Log In">
     </form>
+    <% if(errors){ %>
+      <p><%= errors %></p>
+      <% } else{ %>
+        <h1></h1>
+     <% } %>
     <p>New user? <a href='./sign-up'>Sign Up</a></p>
   </div>
 
